<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".AboutAppActivity">
<!-- Navigation Bar -->
<LinearLayout
    android:id="@+id/navigation_bar"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="47dp"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:contentDescription="backbtn"
        android:src="@drawable/ic_back" />

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="14dp"
        android:gravity="center"
        android:text="Tentang Aplikasi"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Card content -->
                <LinearLayout
                    android:id="@+id/cardTitleTxt1"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/cardTitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Apa itu Calorties? "
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/expandBtn1"
                        android:layout_width="47dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:contentDescription="backbtn"
                        android:src="@drawable/ic_back" />
                </LinearLayout>
                <View
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/black"
                    android:id="@+id/separatorLine" />

                <!-- Hidden content (initially hidden) -->
                <LinearLayout
                    android:backgroundTint="@color/secondary_primary"
                    android:layout_marginHorizontal="16dp"
                    android:id="@+id/hiddenContent1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    >

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Aplikasi Calorties adalah aplikasi yang digunakan oleh para pengguna yang ingin mengontrol kalori yang ada pada tubuhnya." />

                    <!-- Add more views as needed -->

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Card content -->
                <LinearLayout
                    android:id="@+id/cardTitleTxt2"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/cardTitle2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Bagaimana Cara Kerja Calorties?"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:id="@+id/expandBtn2"
                        android:layout_width="47dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:contentDescription="backbtn"
                        android:src="@drawable/ic_back" />
                </LinearLayout>
                <View
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/black"
                    android:id="@+id/separatorLine2"/>

                <!-- Hidden content (initially hidden) -->
                <LinearLayout
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical"
                    android:backgroundTint="@color/secondary_primary"
                    android:id="@+id/hiddenContent2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/workContent1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/work_1_content" />
                    <TextView
                        android:id="@+id/workContent2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/work_2_content" />
                    <TextView
                        android:id="@+id/workContent3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/work_3_content" />

                    <!-- Add more views as needed -->

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Card content -->
                <LinearLayout
                    android:id="@+id/cardTitleTxt3"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/cardTitle3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Bagaimana Cara Menggunakan Calorties?"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:id="@+id/expandBtn3"
                        android:layout_width="47dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:contentDescription="backbtn"
                        android:src="@drawable/ic_back" />
                </LinearLayout>
                <View
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/black"
                    android:id="@+id/separatorLine3"/>

                <!-- Hidden content (initially hidden) -->
                <LinearLayout
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical"
                    android:backgroundTint="@color/secondary_primary"
                    android:layout_marginTop="8dp"
                    android:id="@+id/hiddenContent3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/useDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_1_content" />
                    <TextView
                        android:id="@+id/useDescription2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_2_content" />
                    <TextView
                        android:id="@+id/useDescription3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_3_content" />
                    <TextView
                        android:id="@+id/useDescription4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_4_content" />
                    <TextView
                        android:id="@+id/useDescription5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_5_content" />

                    <!-- Add more views as needed -->

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Card content -->
                <LinearLayout
                    android:id="@+id/cardTitleTxt4"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/cardTitle4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Kontak kami"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:id="@+id/expandBtn4"
                        android:layout_width="47dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:contentDescription="backbtn"
                        android:src="@drawable/ic_back" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/black"
                    android:id="@+id/separatorLine4"/>

                <!-- Hidden content (initially hidden) -->
                <LinearLayout
                    android:layout_marginHorizontal="16dp"
                    android:backgroundTint="@color/secondary_primary"
                    android:id="@+id/hiddenContent4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/descriptionTextView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Jika Anda mengalami kendala atau ada pertanyaan lainnya terkait penggunaan aplikasi Calorties, Anda bisa mengirimkan email ke calortiesfaq@calorties.com" />

                    <!-- Add more views as needed -->

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>

</LinearLayout>